Update to Spring Data Elasticsearch 5.0 + Spring 6.0